--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,19 @@
 [tool.poetry]
-name = "questdb-ilp-client"
+name = "questdb_ilp_client"
 version = "0.0.1"
-description = "A Python API for writing to QuestDB using the InfluxDB Line Protocol"
+description = "A Python3 API for ingesting data into QuestDB through the InfluxDB Line Protocol."
 authors = ["Nathan Scott <nathan@nathanscott.co.uk>"]
 license = "Apache-2.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+flake8 = "^4.0.1"
+black = "^22.1.0"
+isort = "^5.10.1"
+bandit = "^1.7.4"
+safety = "^1.10.3"
+pytest = "^7.1.0"
 
 [tool.poetry.dev-dependencies]
 
