--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,6 +14,12 @@ jobs:
     steps:
     - name: checkout repo
       uses: actions/checkout@v2
+    - name: set up python
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.9
+    - name: install poetry
+      uses: Gr1N/setup-poetry@v7
     - name: install dependencies
       run: make install-dependencies
     - name: check format
