--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ isort = "^5.10.1"
 bandit = "^1.7.4"
 safety = "^1.10.3"
 pytest = "^7.1.0"
+pytest-cov = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 
